@@ -2209,18 +2209,18 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
-name|out
-operator|.
-name|write
-argument_list|(
-name|encryptedSpillKey
-argument_list|)
-expr_stmt|;
 name|extraData
 operator|.
 name|write
 argument_list|(
 name|out
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+name|encryptedSpillKey
 argument_list|)
 expr_stmt|;
 block|}
@@ -2401,18 +2401,18 @@ index|[
 name|len
 index|]
 expr_stmt|;
-name|in
-operator|.
-name|readFully
-argument_list|(
-name|encryptedSpillKey
-argument_list|)
-expr_stmt|;
 name|extraData
 operator|.
 name|readFields
 argument_list|(
 name|in
+argument_list|)
+expr_stmt|;
+name|in
+operator|.
+name|readFully
+argument_list|(
+name|encryptedSpillKey
 argument_list|)
 expr_stmt|;
 block|}
